19990801-18:14 CET Victor Szel <info@szelvesz.hu>
   ! source/compiler/harbour.y - 
     hb_INITSTATICS() -> HB_INITSTATICS() (case adjusted)
   + source/rdd/nulsys/nulsys.prg - Using ANNOUNCE
   ! source/rtl/mtran.c - Fixed, now 100% Clipper compatible.
     - HARD and SOFT characters swapped.
     - HARD and SOFT characters pairs are changed to only one
       character, like in Clipper.
     - unnecessary include ctype.h removed. 
   ! source/rtl/hardcr.c 
     - unnecessary include ctype.h removed. 
     - "HARD_" -> "SOFT_" #define names corrected.
   + tests/working/mtran.prg - More extensive tests added.
   ! source/rtl/msgxxx.c - Previous changes undone, to make it work in GCC.
   + source/tools/numtxten.prg
     source/tools/Makefile
     NumToTxtEN() - English language number to text conversion added.
     Author: "Michael Mozina" <et@snowcrest.net> Donated to the Public Domain.

199908.01-16:30 GMT+3 Alexander Kresin
  * source/hbpp/hbppint.c
    * Bug fixed ( related to line continuation )
    
199908.01-20:30 WIB Andi Jahja
  * msgxxx.c
    correct directives, it now works

199908.01-16:30 GMT+3 Alexander Kresin
  * hbpplib.b32
    * it works now

19990801-13:14 GMT+1 Antonio Linares <alinares@fivetech.com>
   * tests/working/debugger.prg
     * pulldown menu already functional.

19990801-07:45 GMT+2 Ryszard Glab <rglab@imid.med.pl>

    *source/rtl/inkey.c
        * added #include <conio.h> for Watcom section

    *source/vm/hvm.c
        * the symbols are not scaned if there is no INIT/EXIT
          procedure in the module (this is checked at the time of
          symbol registration)
        * _INITSTATICS function is called directly (by pointer)
         instead of Do() function - it gives faster startup code
        * removed calls for hb_ItemClear for uninitialized data
         during startup code - these data have to be initialized
         by assigning the IT_NIL value
        - removed unnecessary calls for hb_itemClear in Push*